# CameraIO

./: .gitignore  CMakeLists.txt  README.md
cameraio/: CMakeLists.txt  camera.hpp  microview.cpp  microview.hpp
test/: CMakeLists.txt  GrabImage.cpp  testapi.cpp
